--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,10 @@ body {
     flex-direction: column;
 }
 
+.contact-container{
+    display: flex;
+}
+
 .contact-bar-info {
     background-color: #075e54;
     color: white;
@@ -37,7 +41,6 @@ body {
 }
 
 .contact-bar {
-    background-color: rgb(82, 83, 81);
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -49,8 +52,12 @@ body {
     transition: background-color 0.2s;
 }
 
+.no-underline{
+    text-decoration: none;
+}
+
 .contact-bar:hover {
-    background-color: rgb(60, 61, 60);
+    background-color: rgb(159, 172, 159);
 }
 
 .contact-profile {
@@ -61,17 +68,15 @@ body {
 }
 
 .contact-name {
+    color: rgb(73, 69, 69);
     font-weight: 600;
     font-size: 1rem;
-    margin: 0 10px;
-    color: #333;
 }
 
 .contact-status {
     font-size: 0.8rem;
-    color: #999;
+    color: #686565;
 }
-
 
 .message-screen {
     display: flex;
@@ -80,6 +85,15 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+.message-screen__messages-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: #ece5dd;
+    overflow: hidden;
+    width: 200vh;
 }
 
 .messages-list {
@@ -154,7 +168,6 @@ body {
 
 .btn-form {
     background-color: #25d366;
-    /* Color del botón */
     border: none;
     border-radius: 20px;
     color: white;
@@ -168,17 +181,16 @@ body {
 
 .btn-form:hover {
     background-color: #128c7e;
-    /* Color al pasar el mouse */
 }
 
+
 @media (max-width: 768px) {
-    .sidebar {
+    .contact-bar {
         display: none;
     }
 
-    .text-form {
-        width: calc(100% - 40px);
-        /* Ajusta el tamaño del input */
+    .contact-container{
+        display: flex;
     }
 }
 
@@ -188,33 +200,8 @@ body {
 
 
 
-.contact-name {
-    text-shadow: 2px 2px rgb(0, 132, 255);
-    color: white;
-    font-weight: 600;
-    font-size: 1rem;
-}
-
-.message-screen__messages-container {
-  flex: 1; /* Ocupa todo el espacio restante */
-  display: flex;
-  flex-direction: column;
-  background-color: #ece5dd;
-  overflow: hidden;
-  width: 200vh;
-}
 
 
 
 
 
-.messages-form-container {
-    padding: 10px 20px;
-    background-color: #f0f0f0;
-    border-top: 1px solid #ddd;
-}
-
-.message-screen__contact-list-container,
-.message-screen__messages-container {
-    height: 100%;
-}
