--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -220,8 +220,13 @@ body {
     background-color: #128c7e;
 }
 
-
-
+input {
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 
 
 
